@@ -446,19 +446,26 @@ var spectools =
                 {
                     var pinfo = fparams[ pn ];
 
-                    if ( typeof pinfo !== 'object' )
-                    {
-                        as.error( FutoInError.InternalError, "Invalid param object" );
-                    }
-
-                    if ( !( 'type' in pinfo ) )
-                    {
-                        as.error( FutoInError.InternalError, "Missing type for params" );
-                    }
-
-                    if ( !( 'default' in pinfo ) )
+                    if ( typeof pinfo === 'string' )
                     {
                         finfo.min_args += 1;
+                    }
+                    else
+                    {
+                        if ( typeof pinfo !== 'object' )
+                        {
+                            as.error( FutoInError.InternalError, "Invalid param object" );
+                        }
+
+                        if ( !( 'type' in pinfo ) )
+                        {
+                            as.error( FutoInError.InternalError, "Missing type for params" );
+                        }
+
+                        if ( !( 'default' in pinfo ) )
+                        {
+                            finfo.min_args += 1;
+                        }
                     }
                 }
             }
@@ -482,14 +489,17 @@ var spectools =
                 {
                     var rinfo = fresult[ rn ];
 
-                    if ( typeof rinfo !== 'object' )
-                    {
-                        as.error( FutoInError.InternalError, "Invalid resultvar object" );
-                    }
+                    if ( typeof rinfo !== 'string' )
+ {
+                        if ( typeof rinfo !== 'object' )
+                        {
+                            as.error( FutoInError.InternalError, "Invalid resultvar object" );
+                        }
 
-                    if ( !( 'type' in rinfo ) )
-                    {
-                        as.error( FutoInError.InternalError, "Missing type for result" );
+                        if ( !( 'type' in rinfo ) )
+                        {
+                            as.error( FutoInError.InternalError, "Missing type for result" );
+                        }
                     }
 
                     finfo.expect_result = true;
@@ -549,6 +559,11 @@ var spectools =
         {
             tinfo = info.types[ t ];
 
+            if ( typeof tinfo === 'string' )
+            {
+                continue;
+            }
+
             if ( !( 'type' in tinfo ) )
             {
                 as.error( FutoInError.InternalError, 'Missing "type" for custom type' );
@@ -564,7 +579,10 @@ var spectools =
 
                 for ( var f in tinfo.fields )
                 {
-                    if ( !( 'type' in tinfo.fields[ f ] ) )
+                    var fdef = tinfo.fields[ f ];
+
+                    if ( ( typeof fdef !== 'string' ) &&
+                         !( 'type' in fdef ) )
                     {
                         as.error( FutoInError.InternalError, 'Missing "type" for custom type field' );
                     }
@@ -734,6 +752,11 @@ var spectools =
         {
             var tdef = info.types[ type ];
 
+            if ( typeof tdef === 'string' )
+ {
+                tdef = { 'type' : tdef };
+            }
+
             _type_stack = _type_stack || {};
             var base_type = tdef.type;
 
@@ -841,6 +864,11 @@ var spectools =
                     {
                         var field_def = fields[ f ];
 
+                        if ( typeof field_def === 'string' )
+ {
+                            field_def = { 'type' : field_def };
+                        }
+
                         if ( !( f in val ) ||
                              ( val[ f ] === null ) )
                         {
@@ -877,17 +905,16 @@ var spectools =
      */
     checkParameterType : function( info, funcname, varname, value )
     {
-        if ( value === null &&
-            info.funcs[ funcname ].params[ varname ].default === null )
+        var vardef = info.funcs[ funcname ].params[ varname ];
+
+        if ( value === null && vardef.default === null )
         {
             return true;
         }
 
-        return spectools.checkType(
-                info,
-                info.funcs[ funcname ].params[ varname ].type,
-                value
-        );
+        var vartype = ( typeof vardef === 'string' ) ? vardef : vardef.type;
+
+        return spectools.checkType( info, vartype, value );
     },
 
     /**
@@ -901,7 +928,10 @@ var spectools =
      */
     checkResultType : function( as, info, funcname, varname, value )
     {
-        if ( !spectools.checkType( info, info.funcs[ funcname ].result[ varname ].type, value ) )
+        var vardef = info.funcs[ funcname ].result[ varname ];
+        var vartype = ( typeof vardef === 'string' ) ? vardef : vardef.type;
+
+        if ( !spectools.checkType( info, vartype, value ) )
         {
             as.error( FutoInError.InvalidRequest, "Type mismatch for result: " + varname );
         }
